fix h1 overflow

--- a/csslocal/styles.css
+++ b/csslocal/styles.css
@@ -130,6 +130,7 @@ h1 {
 	font-size:1.5em;
 	margin: 0 0 10px;
 	padding-left:5px;
+	overflow:auto;
 }
 h1 .info {
 	float:right;
@@ -214,7 +215,6 @@ h1 .info {
 	border-top:3px solid #EEE;
 	margin-left: 30px;
 }
-
 #mapInfo div {
 	margin:0 0 0.8em;
 }
